Fix crash when copy-pasting a transformation mask

BUG:474673